@@ -302,8 +302,7 @@ start_playback( libspectrum_rzx *rzx )
   }
 
   /* End of frame will now be generated by the RZX code */
-  error = event_remove_type( spectrum_frame_event );
-  if( error ) return error;
+  event_remove_type( spectrum_frame_event );
 
   /* Add a sentinel event to prevent tstates overrun (bug #1057471) */
   error = event_add( RZX_SENTINEL_TIME, sentinel_event );
@@ -329,9 +328,7 @@ int rzx_stop_playback( int add_interrupt )
   ui_menu_activate( UI_MENU_ITEM_RECORDING, 0 );
   ui_menu_activate( UI_MENU_ITEM_RECORDING_ROLLBACK, 0 );
 
-  /* Remove our RZX sentinel event */
-  error = event_remove_type( sentinel_event );
-  if( error ) return error;
+  event_remove_type( sentinel_event );
 
   /* We've now finished with the RZX file, so add an end of frame
      event if we've been requested to do so; we don't if we just run
